<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="screen_correction"
  android:title="@string/settings_screen_correction">
  <PreferenceScreen
    android:key="edit_personal_dictionary"
    android:title="@string/edit_personal_dictionary">
    <intent android:action="android.settings.USER_DICTIONARY_SETTINGS" />
  </PreferenceScreen>
  <PreferenceScreen
    android:key="configure_dictionaries_key"
    android:title="@string/configure_dictionaries_title">
    <intent
      android:action="android.intent.action.MAIN"
      android:targetClass="@string/dictionary_pack_settings_activity">
      <extra
        android:name="clientId"
        android:value="@string/dictionary_pack_client_id" />
    </intent>
  </PreferenceScreen>
  <CheckBoxPreference
    android:defaultValue="@bool/config_block_potentially_offensive"
    android:key="pref_key_block_potentially_offensive"
    android:persistent="true"
    android:summary="@string/prefs_block_potentially_offensive_summary"
    android:title="@string/prefs_block_potentially_offensive_title" />
  <ListPreference
    android:defaultValue="@string/auto_correction_threshold_mode_index_modest"
    android:entries="@array/auto_correction_threshold_modes"
    android:entryValues="@array/auto_correction_threshold_mode_indexes"
    android:key="auto_correction_threshold"
    android:persistent="true"
    android:summary="@string/auto_correction_summary"
    android:title="@string/auto_correction" />
  <CheckBoxPreference
    android:defaultValue="true"
    android:key="show_suggestions"
    android:persistent="true"
    android:summary="@string/prefs_show_suggestions_summary"
    android:title="@string/prefs_show_suggestions" />
  <CheckBoxPreference
    android:defaultValue="true"
    android:key="pref_key_use_personalized_dicts"
    android:persistent="true"
    android:summary="@string/use_personalized_dicts_summary"
    android:title="@string/use_personalized_dicts" />
  <CheckBoxPreference
    android:defaultValue="true"
    android:key="pref_key_use_contacts_dict"
    android:persistent="true"
    android:summary="@string/use_contacts_dict_summary"
    android:title="@string/use_contacts_dict" />
  <CheckBoxPreference
    android:defaultValue="true"
    android:key="next_word_prediction"
    android:persistent="true"
    android:summary="@string/bigram_prediction_summary"
    android:title="@string/bigram_prediction" />
</PreferenceScreen>
