<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:neural="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/enable_intro_background"
  android:gravity="center"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-light"
    android:padding="20dp"
    android:text="@string/enable_layout"
    android:textAlignment="4"
    android:textAllCaps="true"
    android:textColor="@color/white"
    android:textSize="30sp" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
    <!--<ImageView android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/arrow_down" />-->
    <io.separ.neural.inputmethod.indic.setup.EnableButtonLayout
      android:id="@id/auth"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="10dp"
      neural:buttonText="@string/authorization"
      neural:number="1" />

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:src="@drawable/arrow_down" />

    <io.separ.neural.inputmethod.indic.setup.EnableButtonLayout
      android:id="@id/enable"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="10dp"
      android:textColor="@color/white"
      neural:buttonText="@string/enable"
      neural:number="2" />

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:src="@drawable/arrow_down" />

    <io.separ.neural.inputmethod.indic.setup.EnableButtonLayout
      android:id="@id/select_keyboard"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="10dp"
      neural:buttonText="@string/select"
      neural:number="3" />
  </LinearLayout>
</LinearLayout>