<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/smart_intro_background"
  android:gravity="center"
  android:orientation="vertical">

  <include
    android:id="@id/webber"
    layout="@layout/neural_net_web_view" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:padding="20dp"
      android:text="@string/neural_network_technology"
      android:textAlignment="4"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="30sp" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:padding="20dp"
      android:text="@string/get_ready_for_your_first_truly_machine_learning_powered_keyboard"
      android:textAlignment="4"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatCheckBox
      android:id="@id/auth_checkbox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="30dp"
      android:buttonTint="@color/white"
      android:checked="true"
      android:text="@string/help_us_improving_your_typing_experience_collecting_anonymous_data"
      android:textColor="@color/white" />
  </LinearLayout>
</RelativeLayout>